--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ html
         li(class="header__list-item")
           a(href="https://packagist.org/packages/simple-icons/simple-icons") Packagist
         li(class="header__list-item")
-          a(href="https://github.com/simple-icons/simple-icons/blob/develop/README.md") About
+          a(href="https://github.com/simple-icons/simple-icons#readme") About
 
     main(class="main" role="main")
       div(class="control")
@@ -56,14 +56,14 @@ html
           p Icon missing? <a href="https://github.com/simple-icons/simple-icons/issues/new?template=icon_request.md">Submit a request</a>
 
         each icon in icons
-          li(class="grid-item" style=`--order-color: ${icon.colorIndex}` data-brand=`${icon.normalizedName}`)
+          li(class="grid-item" style=`--order-color: ${icon.indexByColor}` data-brand=`${icon.normalizedName}`)
             svg(class="grid-item__decoration" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
               title #{icon.title} icon
               path(d=icon.path)
             h2(class="grid-item__title") #{icon.title}
             button(
               class=`grid-item__color copy-button ${icon.light ? "contrast-light" : "contrast-dark"}`
-              style=`background-color: #${icon.color}`
+              style=`background-color: #${icon.shortHex}`
               title=`${icon.title} color`
               data-value=`${icon.hex}`
             ) ##{icon.hex}
