--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,6 @@ html
   head
     meta(charset='utf-8')
     title Simple Icons
-    link(href='./styles/stylesheet.css' rel='stylesheet' type='text/css')
 
   body
     header(class="header" role="banner")
@@ -22,21 +21,28 @@ html
 
     main(class="main" role="main")
       div(class="control")
+        noscript Controls are only available when JavaScript is enabled.
         div(class="control-field search")
           h2(class="control-field__title") Search
           div(class="search__wrapper")
             div(id="search-clear") &times;
-            input(id="search-input" class="control__input" type="text" placeholder="Search by brand …")
+            input(
+              id="search-input"
+              class="control__input"
+              type="text"
+              placeholder="Search by brand …"
+              disabled
+            )
         div(class="control-field")
           h2(class="control-field__title") Order
           div(class="control-field__row")
-            button(id="order-alpha" class="control__button")
+            button(id="order-alpha" class="control__button" disabled)
               svg(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                 title Sort alphabetically
                 path(d="M10.096 18.857H7.525V.429A.414.414 0 0 0 7.096 0H4.525a.414.414 0 0 0-.429.429v18.429H1.525c-.196 0-.331.089-.402.268-.072.17-.04.326.094.469l4.286 4.286c.098.079.2.119.308.119.116 0 .219-.04.308-.12l4.272-4.272a.506.506 0 0 0 .134-.321.414.414 0 0 0-.429-.43z")
                 path(d="M20.102 22.474H16.78c-.188 0-.322.009-.402.026l-.188.026V22.5l.148-.147c.133-.16.227-.276.281-.348l4.941-7.099v-1.191h-7.594v3.066h1.607v-1.54h3.107c.16 0 .295-.014.4-.04a.856.856 0 0 0 .102-.007c.039-.004.068-.007.086-.007v.04l-.146.121c-.08.08-.176.2-.281.361L13.9 22.795V24h7.82v-3.12h-1.619v1.594h.001z")
                 path(d="M21.977 8.866L18.895 0h-2.168l-3.082 8.866h-.936v1.419h3.842V8.866h-1.004l.631-1.929h3.254l.629 1.929h-1.004v1.419h3.857V8.866h-.937zm-5.358-3.402l.977-2.92c.037-.107.07-.236.102-.388s.047-.232.047-.241l.039-.268h.055c0 .036.008.125.025.268l.162.629.963 2.92h-2.37z")
-            button(id="order-color" class="control__button")
+            button(id="order-color" class="control__button" disabled)
               svg(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                 title Sort by color
                 path(d="M9.219 18.857H6.648V.429A.414.414 0 0 0 6.219 0H3.648a.418.418 0 0 0-.308.121.418.418 0 0 0-.121.308v18.428H.648a.4.4 0 0 0-.402.268c-.071.17-.04.326.094.469l4.286 4.287c.098.08.2.119.308.119a.447.447 0 0 0 .308-.119l4.272-4.273a.506.506 0 0 0 .134-.32.417.417 0 0 0-.429-.431z")
@@ -44,7 +50,7 @@ html
                 path(d="M12.219 10.286h6a.42.42 0 0 0 .309-.12.42.42 0 0 0 .121-.308V7.286a.418.418 0 0 0-.121-.308.417.417 0 0 0-.309-.121h-6a.414.414 0 0 0-.308.121.417.417 0 0 0-.12.308v2.572c0 .125.04.228.12.308a.42.42 0 0 0 .308.12z")
                 path(d="M12.219 17.143h8.572c.125 0 .229-.039.309-.119s.119-.184.119-.309v-2.572c0-.125-.039-.227-.119-.307s-.184-.121-.309-.121h-8.572a.418.418 0 0 0-.308.121.415.415 0 0 0-.12.307v2.572c0 .125.04.229.12.309.081.08.183.119.308.119z")
                 path(d="M23.67 20.693a.408.408 0 0 0-.307-.121H12.219a.416.416 0 0 0-.429.428v2.572c0 .125.04.227.121.309a.42.42 0 0 0 .308.119h11.144a.414.414 0 0 0 .307-.119.424.424 0 0 0 .121-.309V21a.416.416 0 0 0-.121-.307z")
-            button(id="order-relevance" class="control__button")
+            button(id="order-relevance" class="control__button" disabled)
               svg(id="sort-relevance" class="sort-btn" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                 title Sort by relevance
                 path(d="M9.219,18.857H6.648V0.429C6.656,0.201,6.478,0.008,6.25,0H3.648C3.533-0.004,3.421,0.04,3.34,0.121C3.259,0.203,3.215,0.314,3.219,0.429v18.428H0.648c-0.179-0.012-0.344,0.098-0.402,0.268c-0.071,0.17-0.04,0.326,0.094,0.469l4.286,4.287C4.724,23.961,4.826,24,4.934,24c0.114,0.001,0.224-0.041,0.308-0.119l4.272-4.273c0.081-0.086,0.128-0.199,0.134-0.318c0.008-0.23-0.172-0.423-0.402-0.432C9.237,18.857,9.228,18.857,9.219,18.857z")
@@ -65,12 +71,14 @@ html
               class=`grid-item__color copy-button ${icon.light ? "contrast-light" : "contrast-dark"}`
               style=`background-color: #${icon.shortHex}`
               title=`${icon.title} color`
+              no-copy
               data-value=`${icon.hex}`
             ) ##{icon.hex}
             div(class="grid-item__footer")
               button(
                 class="grid-item__preview copy-button"
                 title=`${icon.title} SVG`
+                no-copy
                 data-value=`${icon.normalizedName}`
               )
                 svg(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
