Improve mobile(/small screen) experience

--- a/index.pug
+++ b/index.pug
@@ -6,18 +6,18 @@ html
 
   body
     header(class="header" role="banner")
-      div
+      div(class="header__row")
         h1(class="header__title") Simple Icons
-        p(class="header__description") #{iconCount} Free <abbr title="Scalable Vector Graphic">SVG</abbr> icons for popular brands
-      ul(class="header__list")
-        li(class="header__list-item")
-          a(href="https://github.com/simple-icons/simple-icons") GitHub
-        li(class="header__list-item")
-          a(href="https://www.npmjs.com/package/simple-icons") NPM
-        li(class="header__list-item")
-          a(href="https://packagist.org/packages/simple-icons/simple-icons") Packagist
-        li(class="header__list-item")
-          a(href="https://github.com/simple-icons/simple-icons#readme") About
+        ul(class="header__list")
+          li(class="header__list-item")
+            a(href="https://github.com/simple-icons/simple-icons") GitHub
+          li(class="header__list-item")
+            a(href="https://www.npmjs.com/package/simple-icons") NPM
+          li(class="header__list-item")
+            a(href="https://packagist.org/packages/simple-icons/simple-icons") Packagist
+          li(class="header__list-item")
+            a(href="https://github.com/simple-icons/simple-icons#readme") About
+      p(class="header__description") #{iconCount} Free <abbr title="Scalable Vector Graphic">SVG</abbr> icons for popular brands
 
     main(class="main" role="main")
       div(class="control")
