Add missing metadata from original website

--- a/index.pug
+++ b/index.pug
@@ -1,9 +1,30 @@
 doctype html
 html
   head
-    meta(charset='utf-8')
-    title Simple Icons
+    meta(charset="utf-8")
+    meta(content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport")
     link(rel="preconnect" href="https://fonts.gstatic.com")
+    link(rel="preconnect" href="https://cdn.carbonads.com")
+    link(rel="preconnect" href="https://github.com")
+    title Simple Icons
+    meta(name="description" content=`${iconCount} Free SVG icons for popular brands.`)
+    meta(property="og:type" content="website")
+    meta(property="og:title" content="Simple Icons")
+    meta(property="og:description" content=`${iconCount} Free SVG icons for popular brands.`)
+    meta(property="og:url" content="https://simpleicons.org")
+    meta(property="og:site_name" content="Simple Icons")
+    meta(property="og:image" content="https://simpleicons.org/images/og.png")
+    meta(name="twitter:card" content="summary_large_image")
+    meta(name="twitter:title" content="Simple Icons")
+    meta(name="twitter:description" content=`${iconCount} Free SVG icons for popular brands.`)
+    meta(name="twitter:site" content="@bathtype")
+    meta(name="twitter:domain" content="Simple Icons")
+    meta(name="twitter:image:src" content="https://simpleicons.org/images/og.png")
+    link(rel="icon" type="image/x-icon" href="https://simpleicons.org/images/favicon.ico")
+    link(rel="icon" type="image/x-icon" href="https://simpleicons.org/images/favicon.ico")
+    link(rel="icon" type="image/png" href="https://simpleicons.org/images/favicon.png")
+    link(rel="apple-touch-icon" href="https://simpleicons.org/images/apple-touch-icon.png")
+    link(rel="mask-icon" href="https://simpleicons.org/images/logo.svg" color="#111111")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
 
   body
