--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@
   :root {
     font-size: 130%;
 
-    --side-offset: 2rem;
+    --side-offset: 1.5rem;
   }
 }
 
@@ -72,6 +72,7 @@ a {
   font-family: 'Roboto Mono', monospace;
   font-size: 1.7rem;
   font-weight: 600;
+  flex-basis: 40%;
   margin: 0 0 .5rem;
 }
 
@@ -83,6 +84,7 @@ a {
 
 .header__list {
   display: flex;
+  flex-basis: 60%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-end;
@@ -113,11 +115,13 @@ a {
 .control {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap-reverse;
   margin: 2rem 0;
   position: relative;
 }
 @media (max-width: 640px), (orientation: portrait) {
   .control {
+    justify-content: flex-end;
     margin: .5rem 0;
   }
 }
@@ -125,18 +129,19 @@ a {
 .control-field {
   display: flex;
   flex-direction: column;
-  margin: 0 1rem;
+  margin-right: 1rem;
 }
 .control-field:first-of-type {
-  margin-left: 0;
+  flex-basis: 25%;
 }
 @media (max-width: 640px), (orientation: portrait) {
   .control-field {
-    margin: 0 .5rem;
+    margin: .5rem 0 .5rem 1rem;
   }
-
   .control-field:first-of-type {
-    flex-grow: 2;
+    flex-basis: 70%;
+    flex-grow: 1;
+    margin: .5rem 0;
   }
 }
 
@@ -266,28 +271,8 @@ body.order-by-relevance #order-relevance {
   flex-wrap: wrap;
   list-style: none;
   justify-content: flex-start;
-  margin-bottom: 1.5rem;
+  margin: 0 -0.4rem 1.5rem; /* -0.4rem undoes the margin of grid items */
 }
-
-/* @supports (display: grid) {
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
-    grid-auto-rows: min-content;
-    grid-column-gap: 0.375rem;
-    grid-row-gap: 0.375rem;
-    grid-auto-flow: dense;
-  }
-  .grid.search__empty:after {
-    grid-column: 1/span 2;
-  }
-
-  @media (min-width: 30.75rem) {
-    .grid.search__empty:after {
-      grid-column: 1/-3;
-    }
-  }
-} */
 
 .grid-item--if-empty {
   display: none;
@@ -331,7 +316,7 @@ body.search-empty .grid-item--if-empty {
 @media (max-width: 640px), (orientation: portrait) {
   .grid-item {
     min-width: 10rem;
-    width: 30%; /* Roughly 3 per row */
+    width: 30%; /* Roughly 3 per row at most */
   }
 }
 
@@ -385,10 +370,13 @@ body.search-empty .grid-item--if-empty {
   text-align: center;
 }
 .grid-item__color:not(:disabled).copied::before,
-.grid-item__color:not(:disabled):focus::before,
-.grid-item__color:not(:disabled):hover::before {
-  cursor: pointer;
+.grid-item__color:not(:disabled):focus::before {
   display: block;
+}
+@media (hover: hover) {
+  .grid-item__color:not(:disabled):hover::before {
+    display: block;
+  }
 }
 
 .grid-item__footer {
@@ -416,6 +404,7 @@ body.search-empty .grid-item--if-empty {
   background-color: var(--background-color-transparent);
   background-size: 1.7rem 1.7rem;
   content: '';
+  cursor: pointer;
   display: none;
   height: 100%;
   left: 0;
@@ -423,14 +412,14 @@ body.search-empty .grid-item--if-empty {
   top: 0;
   width: 100%;
 }
-.grid-item__preview.copied::before {
-  background-image: url(./assets/check.svg);
-}
 .grid-item__preview:not(:disabled).copied::before,
-.grid-item__preview:not(:disabled):focus::before,
-.grid-item__preview:not(:disabled):hover::before {
-  cursor: pointer;
+.grid-item__preview:not(:disabled):focus::before {
   display: block;
+}
+@media (hover: hover) {
+  .grid-item__preview:not(:disabled):hover::before {
+    display: block;
+  }
 }
 
 .grid-item__downloads {
