Minor HTML size optimizations

--- a/index.pug
+++ b/index.pug
@@ -87,7 +87,7 @@ html
               use(href=`#${icon.slug}-svg`)
             h2(class="grid-item__title") #{icon.title}
             button(
-              class=`grid-item__color copy-button ${icon.light ? "contrast-light" : "contrast-dark"}`
+              class=`grid-item__color copy-button ${icon.light ? "contrast-light" : ""}`
               style=`background-color: #${icon.shortHex}`
               title=`${icon.title} color`
               disabled
