Quickfix download URLs

--- a/index.pug
+++ b/index.pug
@@ -102,12 +102,12 @@ html
                 div(class="grid-item__button-row")
                   a(
                     class="grid-item__button"
-                    href=`/icons/${icon.slug}.svg`
+                    href=`./icons/${icon.slug}.svg`
                     download
                   ) SVG
                   a(
                     class="grid-item__button"
-                    href=`/icons/${icon.slug}.pdf`
+                    href=`./icons/${icon.slug}.pdf`
                     download
                   ) PDF
 
