--- a/stylesheet.css
+++ b/stylesheet.css
@@ -464,6 +464,53 @@ body.order-by-relevance .grid-item {
   order: var(--order-relevance);
 }
 
+/* Footer */
+.footer {
+  align-items: center;
+  background: #EEE;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Roboto Mono', monospace;
+  font-size: .9rem;
+  padding: 2rem var(--side-offset);
+}
+
+.footer a {
+  color: #555;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 1rem;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+.footer a:hover {
+  color: var(--button-color-hover);
+  text-decoration: underline;
+}
+
+a.footer-share {
+  align-items: center;
+  background-color: #1DA1F2;
+  border-radius: 4px;
+  color: #FFF;
+  display: flex;
+  font-weight: normal;
+  padding: 0.75rem 1.5rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+a.footer-share:hover {
+  color: #FFF;
+  text-decoration: none;
+}
+
+.footer-share--icon {
+  fill: #FFF;
+  width: 1rem;
+  margin-right: .5rem;
+}
+
 /* Utility */
 
 .copy-button::before {
