Updated Footer Role

--- a/index.pug
+++ b/index.pug
@@ -113,7 +113,7 @@ html
 
     input(id="copy-input" class="hidden" aria-hidden="true")
 
-    footer(class="footer" role="footer")
+    footer(class="footer" role="contentinfo")
       div
         p A <a href="https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md">CC0</a> project maintained by the <a href="https://github.com/simple-icons/simple-icons/graphs/contributors">Simple Icons Contributors</a>.
         p Use <a href="https://github.com/simple-icons/simple-icons">GitHub</a> for requests, corrections and contributions.
