--- a/index.pug
+++ b/index.pug
@@ -103,4 +103,23 @@ html
                     download
                   ) PDF
 
+    footer(class="footer" role="contentinfo")
+      div(class="footer-description")
+        p.
+          A #[a(href="https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md" rel="noopener") CC0] project maintained
+          by the #[a(href="https://github.com/simple-icons/simple-icons/graphs/contributors" rel="noopener") Simple Icons Contributors].
+        p.
+          Use #[a(href="https://github.com/simple-icons/simple-icons" rel="noopener") GitHub] for requests, corrections and contributions.
+      a(
+        class="footer-share"
+        rel="noopener"
+        role="button"
+        target="_blank"
+        href="https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.&via=bathytype"
+      )
+        svg(class="footer-share--icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
+          title Twitter logo
+          use(href=`#twitter-svg`)
+        span Share this on Twitter!
+
     input(id="copy-input" class="hidden" aria-hidden="true")
