--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,15 +9,38 @@
   height: 100%;
   min-width: 480px;
 
-  --background-color: rgb(252, 252, 252);
-  --background-color-transparent: rgba(252, 252, 252, 0.7);
-  --default-text-color: rgb(0, 0, 0);
-  --button-color-hover: rgb(51, 51, 51);
-  --button-color-active: rgb(51, 51, 51);
-  --color-disabled: rgb(170, 170, 170);
   --color-twitter: rgb(29, 161, 242);
   --color-twitter-hover: rgba(29, 161, 242, 0.8);
   --side-offset: 6rem;
+
+  /* Dark mode colors and assets */
+  --dm-asset-svg-copy: url(./assets/copy-white.svg);
+  --dm-asset-svg-copied: url(./assets/check-white.svg);
+  --dm-color-background: rgb(34, 34, 34);
+  --dm-color-background-transparent: rgba(34, 34, 34, .7);
+  --dm-color-background-card: rgb(17, 17, 17);
+  --dm-color-text-default: rgb(250, 250, 250);
+  --dm-color-svg-default: rgb(255, 255, 255);
+  --dm-color-button-hover: rgb(221, 221, 221);
+  --dm-color-button-active: rgb(221, 221, 221);
+  --dm-color-button-text-hover: rgb(0, 0, 0);
+  --dm-color-disabled: rgb(170, 170, 170);
+  --dm-color-shadow: rgba(153, 153, 153, .75);
+
+  /* Light mode colors and assets */
+  --lm-asset-svg-copy: url(./assets/copy.svg);
+  --lm-asset-svg-copied: url(./assets/check.svg);
+  --lm-color-background: rgb(252, 252, 252);
+  --lm-color-background-transparent: rgba(252, 252, 252, .7);
+  --lm-color-background-card: rgb(255, 255, 255);
+  --lm-color-text-default: rgb(0, 0, 0);
+  --lm-color-svg-default: rgb(0, 0, 0);
+  --lm-color-button-hover: rgb(51, 51, 51);
+  --lm-color-button-active: rgb(51, 51, 51);
+  --lm-color-button-text-hover: rgb(255, 255, 255);
+  --lm-color-disabled: rgb(170, 170, 170);
+  --lm-color-shadow: rgba(0, 0, 0, .5);
+
 }
 @media (max-width: 640px), (orientation: portrait) {
   :root {
@@ -27,9 +50,75 @@
   }
 }
 
+/* Color schemes */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --asset-svg-copy: var(--dm-asset-svg-copy);
+    --asset-svg-copied: var(--dm-asset-svg-copied);
+    --color-background: var(--dm-color-background);
+    --color-background-transparent: var(--dm-color-background-transparent);
+    --color-background-card: var(--dm-color-background-card);
+    --color-text-default: var(--dm-color-text-default);
+    --color-svg-default: var(--dm-color-svg-default);
+    --color-button-hover: var(--dm-color-button-hover);
+    --color-button-active: var(--dm-color-button-active);
+    --color-button-text-hover: var(--dm-color-button-text-hover);
+    --color-disabled: var(--dm-color-disabled);
+    --color-shadows: var(--dm-color-shadow);
+  }
+}
+@media (prefers-color-scheme: light) {
+  :root {
+    --asset-svg-copy: var(--lm-asset-svg-copy);
+    --asset-svg-copied: var(--lm-asset-svg-copied);
+    --color-background: var(--lm-color-background);
+    --color-background-transparent: var(--lm-color-background-transparent);
+    --color-background-card: var(--lm-color-background-card);
+    --color-text-default: var(--lm-color-text-default);
+    --color-svg-default: var(--lm-color-svg-default);
+    --color-button-hover: var(--lm-color-button-hover);
+    --color-button-active: var(--lm-color-button-active);
+    --color-button-text-hover: var(--lm-color-button-text-hover);
+    --color-disabled: var(--lm-color-disabled);
+    --color-shadows: var(--lm-color-shadow);
+  }
+}
+
+body.dark {
+  --asset-svg-copy: var(--dm-asset-svg-copy);
+  --asset-svg-copied: var(--dm-asset-svg-copied);
+  --color-background: var(--dm-color-background);
+  --color-background-transparent: var(--dm-color-background-transparent);
+  --color-background-card: var(--dm-color-background-card);
+  --color-text-default: var(--dm-color-text-default);
+  --color-svg-default: var(--dm-color-svg-default);
+  --color-button-hover: var(--dm-color-button-hover);
+  --color-button-active: var(--dm-color-button-active);
+  --color-button-text-hover: var(--dm-color-button-text-hover);
+  --color-disabled: var(--dm-color-disabled);
+  --color-shadows: var(--dm-color-shadow);
+}
+body.light {
+  --asset-svg-copy: var(--lm-asset-svg-copy);
+  --asset-svg-copied: var(--lm-asset-svg-copied);
+  --color-background: var(--lm-color-background);
+  --color-background-transparent: var(--lm-color-background-transparent);
+  --color-background-card: var(--lm-color-background-card);
+  --color-text-default: var(--lm-color-text-default);
+  --color-svg-default: var(--lm-color-svg-default);
+  --color-button-hover: var(--lm-color-button-hover);
+  --color-button-active: var(--lm-color-button-active);
+  --color-button-text-hover: var(--lm-color-button-text-hover);
+  --color-disabled: var(--lm-color-disabled);
+  --color-shadows: var(--lm-color-shadow);
+}
+
+/* General */
+
 body {
-  background-color: var(--background-color);
-  color: var(--default-text-color);
+  background-color: var(--color-background);
+  color: var(--color-text-default);
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -97,14 +186,13 @@ a {
 }
 
 .header__list-item {
-  /* color: #555; */
   font-family: 'Roboto Mono', monospace;
   font-size: 1rem;
   font-weight: 600;
   margin: 0 .7rem;
 }
 .header__list-item:hover {
-  color: var(--button-color-hover);
+  color: var(--color-button-hover);
   text-decoration: underline;
 }
 
@@ -174,7 +262,8 @@ body.no-js .control-field__title {
 .control__button,
 .control__input {
   background-color: transparent;
-  border: .1rem solid var(--button-color-hover);
+  border: .1rem solid var(--color-button-hover);
+  color: var(--color-text-default);
   height: 2.4rem;
   padding: .4rem;
 }
@@ -196,7 +285,7 @@ body.no-js .control-field__title {
 
 .control__button {
   cursor: default; /* Button should not work when JS is disabled */
-  fill: var(--button-color-hover);
+  fill: var(--color-button-hover);
   margin: 0 .3rem;
   width: 2.4rem;
 }
@@ -205,10 +294,11 @@ body.no-js .control-field__title {
 }
 .control__button:not(:disabled):focus,
 .control__button:not(:disabled):hover {
-  background-color: var(--button-color-hover) !important;
-  border-color: var(--button-color-hover) !important;
+  background-color: var(--color-button-hover) !important;
+  border-color: var(--color-button-hover) !important;
+  color: var(--color-background);
   cursor: pointer;
-  fill: var(--background-color);
+  fill: var(--color-background);
 }
 .control__button.hidden {
   display: none;
@@ -254,10 +344,23 @@ body.no-js .control-field__title {
 body.order-alphabetically #order-alpha,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
-  background-color: var(--button-color-active);
-  border-color: var(--button-color-active);
+  background-color: var(--color-button-active);
+  border-color: var(--color-button-active);
+  color: var(--color-background);
   cursor: default;
-  fill: var(--background-color);
+  fill: var(--color-background);
+}
+
+/* Control - color */
+
+body.dark #color-scheme-dark,
+body.light #color-scheme-light,
+body:not(.dark):not(.light) #color-scheme-system {
+  background-color: var(--color-button-active);
+  border-color: var(--color-button-active);
+  color: var(--color-background);
+  cursor: default;
+  fill: var(--color-background);
 }
 
 /* Control - noscript */
@@ -306,9 +409,9 @@ body.order-by-relevance #order-relevance {
 
 .grid-item {
   align-items: flex-start;
-  background-color: #FFF;
+  background-color: var(--color-background-card);
   border-radius: 4px;
-  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 3px 0px var(--color-shadows);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -330,7 +433,7 @@ body.order-by-relevance #order-relevance {
 }
 
 .grid-item__decoration {
-  fill: #000;
+  fill: var(--color-svg-default);
   height: 6rem;
   opacity: 0.05;
   position: absolute;
@@ -390,7 +493,7 @@ body.order-by-relevance #order-relevance {
 
 .grid-item__footer {
   border-top: 1px solid #CCC;
-  background-color: var(--background-color);
+  background-color: var(--color-background);
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -402,7 +505,7 @@ body.order-by-relevance #order-relevance {
 
 .grid-item__preview {
   cursor: default; /* This should function as decoration when JS is disabled */
-  fill: #000;
+  fill: var(--color-svg-default);
   flex-grow: 0;
   height: 3rem;
   margin-right: 1rem;
@@ -410,7 +513,7 @@ body.order-by-relevance #order-relevance {
   width: 3rem;
 }
 .grid-item__preview::before {
-  background-color: var(--background-color-transparent);
+  background-color: var(--color-background-transparent);
   background-size: 1.7rem 1.7rem;
   content: '';
   cursor: pointer;
@@ -447,7 +550,7 @@ body.order-by-relevance #order-relevance {
 }
 
 .grid-item__button {
-  border: .1rem solid var(--button-color-hover);
+  border: .1rem solid var(--color-button-hover);
   padding: .3rem .4rem;
   margin: 0 .4rem;
   font-family: 'Roboto Mono', monospace;
@@ -459,8 +562,8 @@ body.order-by-relevance #order-relevance {
 }
 .grid-item__button:focus,
 .grid-item__button:hover {
-  background: var(--button-color-hover);
-  color: #FFF;
+  background: var(--color-button-hover);
+  color: var(--color-button-text-hover);
 }
 
 /* Ordering grid-items */
@@ -495,7 +598,7 @@ body.order-by-relevance .grid-item {
 }
 .footer-description a:focus,
 .footer-description a:hover {
-  color: var(--button-color-hover);
+  color: var(--color-button-hover);
   text-decoration: underline;
 }
 
@@ -531,19 +634,22 @@ body.order-by-relevance .grid-item {
 
 .copy-button::before {
   content: '';
-  background-image: url(./assets/copy.svg);
+  background-image: var(--asset-svg-copy);
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
+.copy-button.contrast-dark::before {
+  background-image: var(--lm-asset-svg-copy);
+}
 .copy-button.contrast-light::before {
-  content: '';
-  background-image: url(./assets/copy-white.svg);
+  background-image: var(--dm-asset-svg-copy);
 }
 .copy-button.copied::before {
-  content: '';
-  background-image: url(./assets/check.svg);
+  background-image: var(--asset-svg-copied);
+}
+.copy-button.copied.contrast-dark::before {
+  background-image: var(--lm-asset-svg-copied);
 }
 .copy-button.copied.contrast-light::before {
-  content: '';
-  background-image: url(./assets/check-white.svg);
+  background-image: var(--dm-asset-svg-copied);
 }
