Fixed Twitter 'via' attribute.

--- a/public/index.pug
+++ b/public/index.pug
@@ -127,7 +127,7 @@ html
         rel="noopener"
         role="button"
         target="_blank"
-        href="https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.&via=bathytype"
+        href="https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.&via=bathtype"
       )
         svg(class="footer-share--icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
           title Twitter logo
