--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -398,6 +398,20 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   justify-content: flex-start;
   margin: 0 -0.4rem 1.5rem; /* -0.4rem undoes the margin of grid items */
 }
+@supports (display: grid) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+    grid-auto-rows: min-content;
+    grid-column-gap: 0.375rem;
+    grid-row-gap: 0.375rem;
+    grid-auto-flow: dense;
+  }
+
+  .grid-item--if-empty {
+    grid-column:  1/span 3;
+  }
+}
 
 .grid-item--if-empty {
   display: flex;
@@ -429,21 +443,26 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   box-shadow: 0px 0px 3px 0px var(--color-shadows);
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
   justify-content: flex-end;
   margin: 0.4rem;
   overflow: hidden;
   padding-top: 2.5rem;
   position: relative;
-  width: 200px;
 }
 .grid-item.hidden {
   display: none;
 }
-@media (max-width: 640px), (orientation: portrait) {
+@supports not (display: grid) {
   .grid-item {
-    min-width: 10rem;
-    width: 30%; /* Roughly 3 per row at most */
+    flex-grow: 1;
+    width: 200px;
+  }
+
+  @media (max-width: 640px), (orientation: portrait) {
+    .grid-item {
+      min-width: 10rem;
+      width: 30%; /* Roughly 3 per row at most */
+    }
   }
 }
 
