--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -7,7 +7,7 @@
 :root {
   font-size: 100%;
   height: 100%;
-  min-width: 480px;
+  min-width: 280px;
 
   --color-twitter: rgb(29, 161, 242);
   --color-twitter-hover: rgba(29, 161, 242, 0.8);
@@ -47,11 +47,19 @@
   --lm-color-link-hover: rgb(52, 52, 238);
   --lm-color-link-visited: rgb(85, 26, 139);
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 1080px) {
+  :root {
+    --side-offset: 3rem;
+  }
+}
+@media (max-width: 860px) {
+  :root {
+    --side-offset: 1.5rem;
+  }
+}
+@media (max-width: 640px) {
   :root {
     font-size: 130%;
-
-    --side-offset: 1.5rem;
   }
 }
 
@@ -166,17 +174,15 @@ a {
   margin: 5rem 0 2rem;
   padding: 1rem var(--side-offset);
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 860px) {
+  .header {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 640px) {
   .header {
     margin: 1rem 0 2rem;
   }
-}
-
-.header__row {
-  align-items: baseline;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .header__title {
@@ -195,11 +201,19 @@ a {
 
 .header__list {
   display: flex;
-  flex-basis: 60%;
   flex-direction: row;
   flex-wrap: wrap;
+  float: right;
   justify-content: flex-end;
   list-style: none;
+  margin: .2rem 0 0;
+}
+@media (max-width: 640px) {
+  .header__list {
+    float: none;
+    justify-content: space-around;
+    margin: 0 0 1rem;
+  }
 }
 
 .header__list-item {
@@ -230,7 +244,7 @@ a {
   margin: 2rem 0;
   position: relative;
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 640px) {
   .control {
     justify-content: flex-end;
     margin: .5rem 0;
@@ -246,7 +260,7 @@ a {
   flex-basis: 25%;
   min-width: 260px;
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 640px) {
   .control-field {
     margin: .5rem 0 .5rem 1rem;
   }
@@ -294,7 +308,7 @@ body.no-js .control-field__title {
 .control__input:focus {
   box-shadow: 0 0 3px 0 rgba(68, 68, 68, .5);
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 640px) {
   .control__input {
     font-size: 1.1rem;
   }
@@ -458,7 +472,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
     width: 200px;
   }
 
-  @media (max-width: 640px), (orientation: portrait) {
+  @media (max-width: 640px) {
     .grid-item {
       min-width: 10rem;
       width: 30%; /* Roughly 3 per row at most */
@@ -643,11 +657,10 @@ body.order-by-relevance .grid-item {
   color: #FFF;
   display: flex;
   font-weight: normal;
-  flex-shrink: 0;
   padding: .75rem 1.25rem;
   text-align: center;
 }
-@media (max-width: 640px), (orientation: portrait) {
+@media (max-width: 640px) {
   .footer .footer-share {
     flex-grow: 1;
     justify-content: center;
